--- a/BaguetteJousting/UnityVS.BaguetteJousting.CSharp.csproj
+++ b/BaguetteJousting/UnityVS.BaguetteJousting.CSharp.csproj
@@ -65,6 +65,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\BackRef.cs" />
+    <Compile Include="Assets\FrontRef.cs" />
+    <Compile Include="Assets\PlayerController.cs" />
     <Compile Include="Assets\ShaderForge\Example Assets\Scripts\EditorLabel.cs" />
     <Compile Include="Assets\ShaderForge\Example Assets\Scripts\EnableCameraDepthInForward.cs" />
   </ItemGroup>
