--- a/BaguetteJousting/UnityVS.BaguetteJousting.CSharp.Plugins.csproj
+++ b/BaguetteJousting/UnityVS.BaguetteJousting.CSharp.Plugins.csproj
@@ -60,6 +60,9 @@
     <Compile Include="Assets\Standard Assets\Scripts\General Scripts\ActivateTrigger.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Materials\cloth.shader" />
+    <None Include="Assets\Materials\cloth2.shader" />
+    <None Include="Assets\Resources\Materials\floor.shader" />
     <None Include="Assets\ShaderForge\Example Assets\Shaders\Cubemaps.shader" />
     <None Include="Assets\ShaderForge\Example Assets\Shaders\CustomLighting.shader" />
     <None Include="Assets\ShaderForge\Example Assets\Shaders\LightCone.shader" />
