--- a/BaguetteJousting/UnityVS.BaguetteJousting.CSharp.csproj
+++ b/BaguetteJousting/UnityVS.BaguetteJousting.CSharp.csproj
@@ -65,6 +65,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\BaguetteSpawner.cs" />
+    <Compile Include="Assets\MidPlayers.cs" />
     <Compile Include="Assets\Scripts\ActivateRenderer.cs" />
     <Compile Include="Assets\Scripts\Arena.cs" />
     <Compile Include="Assets\Scripts\BackRef.cs" />
